syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "Protobuf/base/acs12.proto";

option csharp_namespace = "TomorrowDAO.Contracts.DAO";

service DAOContract {
  option (aelf.csharp_state) = "TomorrowDAO.Contracts.DAO.DAOContractState";
  option (aelf.base) = "Protobuf/base/acs12.proto";

  rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {}
  rpc CreateDAO (CreateDAOInput) returns (google.protobuf.Empty) {}
  rpc SetSubsistStatus (SetSubsistStatusInput) returns (google.protobuf.Empty) {}
  rpc GetDAOInfo (aelf.Hash) returns (DAOInfo) {option (aelf.is_view) = true;}
  rpc GetDAOIdByName (google.protobuf.StringValue) returns (aelf.Hash) {option (aelf.is_view) = true;}
  rpc GetMetadata (aelf.Hash) returns (Metadata) {option (aelf.is_view) = true;}
  rpc GetSubsistStatus (aelf.Hash) returns (google.protobuf.BoolValue) {option (aelf.is_view) = true;}
  rpc GetGovernanceToken (aelf.Hash) returns (google.protobuf.StringValue) {option (aelf.is_view) = true;}
  rpc GetInitializedContracts (google.protobuf.Empty) returns (ContractAddressList) {option (aelf.is_view) = true;}
  rpc GetReferendumAddress (aelf.Hash) returns (aelf.Address) {option (aelf.is_view) = true;}
  rpc GetHighCouncilAddress (aelf.Hash) returns (aelf.Address) {option (aelf.is_view) = true;}

  // high council
  rpc EnableHighCouncil (EnableHighCouncilInput) returns (google.protobuf.Empty) {}
  rpc DisableHighCouncil (aelf.Hash) returns (google.protobuf.Empty) {}
  rpc GetHighCouncilStatus (aelf.Hash) returns (google.protobuf.BoolValue) {option (aelf.is_view) = true;}

  // file
  rpc UploadFileInfos (UploadFileInfosInput) returns (google.protobuf.Empty) {}
  rpc RemoveFileInfos (RemoveFileInfosInput) returns (google.protobuf.Empty) {}
  rpc GetFileInfos (aelf.Hash) returns (FileInfoList) {option (aelf.is_view) = true;}

  // permission
  rpc HasPermission (HasPermissionInput) returns (google.protobuf.BoolValue) {option (aelf.is_view) = true;}
  
  // to delete
  rpc SetGovernanceContract (aelf.Address) returns (google.protobuf.Empty) {}
  rpc SetElectionContract (aelf.Address) returns (google.protobuf.Empty) {}
  rpc SetTimelockContract (aelf.Address) returns (google.protobuf.Empty) {}
  rpc SetTreasuryContract (aelf.Address) returns (google.protobuf.Empty) {}
  rpc SetVoteContract (aelf.Address) returns (google.protobuf.Empty) {}
}

message InitializeInput {
  aelf.Address governance_contract_address = 1;
  aelf.Address vote_contract_address = 2;
  aelf.Address treasury_contract_address = 3;
  aelf.Address election_contract_address = 4;
  aelf.Address timelock_contract_address = 5;
}

message CreateDAOInput {
  Metadata metadata = 1;  // basic info
  string governance_token = 2;  // can be empty
  GovernanceSchemeThreshold governance_scheme_threshold = 3;  // governance scheme threshold for referendum
  HighCouncilInput high_council_input = 4;
  bool is_treasury_contract_needed = 5;  // if true, create treasury
  repeated File files = 6;
  bool is_network_dao = 7;
}

message HighCouncilInput {
  HighCouncilConfig high_council_config = 1;  // empty if high council is not enabled
  GovernanceSchemeThreshold governance_scheme_threshold = 2;  // governance scheme threshold for high council
}

message Metadata {
  string name = 1;
  string logo_url = 2;
  string description = 3;                // limit 240
  map<string, string> social_media = 4;  // Twitter, Facebook, Discord, Telegram, Reddit
}

message SocialMediaList {
  repeated string data = 1;
}

message GovernanceSchemeThreshold {// copy from governance contract
  int64 minimal_required_threshold = 1;
  int64 minimal_vote_threshold = 2;
  int64 minimal_approve_threshold = 3;     // percentage
  int64 maximal_rejection_threshold = 4;   // percentage
  int64 maximal_abstention_threshold = 5;  // percentage
}

message HighCouncilConfig {
  int64 max_high_council_member_count = 1;
  int64 max_high_council_candidate_count = 2;
  int64 election_period = 3;
  int64 staking_amount = 4;
}

message File {
  string cid = 1;   // id
  string name = 2;
  string url = 3;
}

message FileInfo {
  File file = 1;
  google.protobuf.Timestamp upload_time = 2;
  aelf.Address uploader = 3;
}

message FileInfoList {
  map<string, FileInfo> data = 1;  // cid -> FileInfo
}

enum PermissionType {
  DEFAULT = 0;         // Referendum and HighCouncil if enabled
  CREATOR = 1;         // Creator only
}

message PermissionInfo {
  aelf.Address where = 1;
  aelf.Address who = 2;
  string what = 3;
}

message DAOInfo {
  aelf.Hash dao_id = 1;
  aelf.Address creator = 2;
  bool subsist_status = 3;
  string governance_token = 4;
  ContractAddressList contract_address_list = 5;
  bool is_network_dao = 6;
}

message ContractAddressList {
  aelf.Address governance_contract_address = 1;
  aelf.Address vote_contract_address = 2;
  aelf.Address treasury_contract_address = 3;
  aelf.Address election_contract_address = 4;
  aelf.Address timelock_contract_address = 5;
}

message SetSubsistStatusInput {
  aelf.Hash dao_id = 1;
  bool status = 2;
}

message EnableHighCouncilInput {
  aelf.Hash dao_id = 1;
  HighCouncilInput high_council_input = 2;
}

message UploadFileInfosInput {
  aelf.Hash dao_id = 1;
  repeated File files = 2;
}

message RemoveFileInfosInput {
  aelf.Hash dao_id = 1;
  repeated string file_cids = 2;
}

message HasPermissionInput {
  aelf.Hash dao_id = 1;
  aelf.Address where = 2;  // target contract address
  aelf.Address who = 3;    // address who is granted the permission
  string what = 4;         // target function name
}

// log event
message DAOCreated {
  option (aelf.is_event) = true;
  Metadata metadata = 1;
  string governance_token = 2;
  aelf.Hash dao_id = 3;
  aelf.Address creator = 4;
  ContractAddressList contract_address_list = 5;
  bool is_network_dao = 6;
}

message SubsistStatusSet {
  option (aelf.is_event) = true;
  aelf.Hash dao_id = 1;
  bool status = 2;
}

message HighCouncilEnabled {
  option (aelf.is_event) = true;
  aelf.Hash dao_id = 1;
  HighCouncilInput high_council_input = 2;
  aelf.Address high_council_address = 3;
}

message HighCouncilDisabled {
  option (aelf.is_event) = true;
  aelf.Hash dao_id = 1;
}

message FileInfosUploaded {
  option (aelf.is_event) = true;
  aelf.Hash dao_id = 1;
  FileInfoList uploaded_files = 2;
}

message FileInfosRemoved {
  option (aelf.is_event) = true;
  aelf.Hash dao_id = 1;
  FileInfoList removed_files = 2;
}